--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,8 +47,8 @@ jobs:
         uses: imranismail/setup-kustomize@v1
       - name: Decrypt secret
         run: |-
-          curl -O -L -C - https://github.com/mozilla/sops/releases/download/v3.7.3/sops-v3.7.3.darwin
-          sudo mv sops-v3.7.3.darwin /usr/bin/sops
+          curl -O -L -C - https://github.com/mozilla/sops/releases/download/v3.7.3/sops-v3.7.3.linux.amd64
+          sudo mv sops-v3.7.3.linux.amd64 /usr/bin/sops
           sudo chmod +x /usr/bin/sops
           SOPS_AGE_KEY=${{ secrets.GKE_DWK_SOPS_AGE_KEY }}
           sops --decrypt secret.enc.yaml --output secret.yaml
