--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,8 @@ jobs:
           curl -O -L -C - https://github.com/mozilla/sops/releases/download/v3.7.3/sops-v3.7.3.linux
           sudo mv sops-v3.7.3.linux /usr/bin/sops
           sudo chmod +x /usr/bin/sops
-          SOPS_AGE_KEY=${{ secrets.GKE_DWK_SOPS_AGE_KEY }}
+          export SOPS_AGE_KEY=${{ secrets.GKE_DWK_SOPS_AGE_KEY }}
+          echo $SOPS_AGE_KEY
           sops --decrypt manifests/secret.enc.yaml --output manifests/secret.yaml
 env:
   PROJECT_ID: ${{ secrets.GKE_DWK_PROJECT }}
