--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -19,6 +19,6 @@ COPY /tomcat/setenv.sh bin/
 # Replaces port=8080 with port=${port.http.nonssl} in server.xml
 RUN sed -i "s/port=\"[0-9]\+\" protocol=\"HTTP\/1.1\"/port=\"\${port.http.nonssl}\" protocol=\"HTTP\/1.1\"/" conf/server.xml
 
-COPY --from=build /usr/src/app/to-do-web/target/to-do-web.war webapps/to-do.war
+COPY --from=build /usr/src/app/to-do-web/target/todo.war webapps/todo.war
 
 CMD ["catalina.sh", "run"]
