--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: to-do-project
-  name: to-do-api-dep
+  name: to-do-api
 spec:
   replicas: 1
   selector:
@@ -47,7 +47,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: to-do-project
-  name: to-do-web-dep
+  name: to-do-web
 spec:
   replicas: 1
   selector:
