--- a/to-do-web/pom.xml
+++ b/to-do-web/pom.xml
@@ -105,7 +105,7 @@
     </dependencies>
 
     <build>
-        <finalName>to-do-web</finalName>
+        <finalName>todo</finalName>
     </build>
 
 </project>
