fixes urls and adds healthcheck endpoints for ingress

--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -73,4 +73,4 @@ spec:
             - name: UPLOAD_LOCATION
               value: "/usr/src/app/local_files/images/to-do-today.jpg"
             - name: TODO_API_URI
-              value: "http://to-do-api-svc:2345/to-do-api/api/todos"
+              value: "http://to-do-api-svc:2345/api/todos"
