--- a/to-do-api/pom.xml
+++ b/to-do-api/pom.xml
@@ -115,7 +115,7 @@
     </dependencies>
 
     <build>
-        <finalName>to-do-api</finalName>
+        <finalName>ROOT</finalName>
     </build>
 
 </project>
