--- a/to-do-web/src/main/webapp/WEB-INF/web.xml
+++ b/to-do-web/src/main/webapp/WEB-INF/web.xml
@@ -12,26 +12,17 @@
     </resource-env-ref>
 
     <servlet>
-        <servlet-name>Faces Servlet</servlet-name>
+        <servlet-name>faces</servlet-name>
         <servlet-class>jakarta.faces.webapp.FacesServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
     </servlet>
+
     <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>*.xhtml</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/todo</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/todo/*</url-pattern>
+        <servlet-name>faces</servlet-name>
+        <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
 
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-        <welcome-file>index.xhtml</welcome-file>
-    </welcome-file-list>
-
+    <servlet-mapping>
+        <servlet-name>faces</servlet-name>
+        <url-pattern>*.jsp</url-pattern>
+    </servlet-mapping>
 </web-app>
