--- a/to-do-web/src/main/webapp/WEB-INF/web.xml
+++ b/to-do-web/src/main/webapp/WEB-INF/web.xml
@@ -18,11 +18,6 @@
 
     <servlet-mapping>
         <servlet-name>faces</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>faces</servlet-name>
-        <url-pattern>*.jsp</url-pattern>
+        <url-pattern>/todo/*</url-pattern>
     </servlet-mapping>
 </web-app>
