updating encrypted secret after change

--- a/manifests/secret.enc.yaml
+++ b/manifests/secret.enc.yaml
@@ -4,9 +4,9 @@ metadata:
     name: postgres-secret-config
 type: Opaque
 data:
-    POSTGRES_DB: ENC[AES256_GCM,data:wisRyxadW1wsFlJk,iv:pIFcFlt9mFy+DS5uFntf5nAWz+OsJNdc+6G2NVcC5Rg=,tag:9wbUm98SiQ5RNFvRzYWkaw==,type:str]
-    POSTGRES_USER: ENC[AES256_GCM,data:BoinIOxUGhQ00Pb8,iv:PET07Qn4z8zEintrKBGSFj7WeS6/3N4MtcqoBujf2w0=,tag:92lHjN8MFNfUJPWGw5sEgA==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:UP1JvOMdtgRDxt3TSChbfPUJ1gc74pvlinsemQ==,iv:vtQRHJGT/Ae49KlqKbtqgHskrWL61SAFARJCQC0UATE=,tag:4Pct790cDDz3lSqshlRqwQ==,type:str]
+    POSTGRES_DB: ENC[AES256_GCM,data:oMi6ZcVOTzxf953w,iv:0efQ8y2Dqvnbb5M2+krX7SCpLhZtTgeECf3a+qkBbQQ=,tag:gISUXC95Z+RyOUiVaJyQ0Q==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:FMkDKusL99z6qFsv,iv:K+UsJkM3TFGcvwN4cZ/Yq0W+oUv6ypf3vaet7XHn10E=,tag:nAEJz6xeg1+qkVM2qYUR/g==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:B+9dD1DlnwqxT5YQ15oZfEqM6l+AlmyR2AFdUA==,iv:uAGAwW5fGurOX9KXhUbmlCS0l6pQy/j/LWYXILLdc4c=,tag:GbZn6cKRu6XnE2OlZ46cCw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1rf6mvs2deuyrv34qsl5ftq7tfvs8f9f3d5f4y63hjcpgznyuc42qj6ep8z
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvcnB5czdrOVZxMnhYS3NK
-            NlNBUGVCRUtVTjg4aXgwYktqSUY2Rm51Y1JrCmI0c3FTVGJvbTFMNXpjQk1kUGFt
-            UDhWY1hEZ1I0c1hTRE5pTFFHUFlxWGsKLS0tIHBVdWpqeFlEbkduRDQxSTRTUUcr
-            Z2gvcktiZGJXOTRseWlrNm1SUVJhaVUKHylArvZKV+VQMI+4rBOyZV9DNL7oXV0/
-            H4l/qQtCBIwsw/0jqL+ms8ScWDc4Ex1zOSBYNrFuXwmY5RMmZNLojg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAreGxMZHRGRGRXdU0yTVlG
+            UTZsdTc3SmRLc1ZCU0tocGdTa2JUaGx2NTJJClYxd2Z6TnA0NFBXZDRxTVU4U0NP
+            N0FibjA1SGpNK040b3Jya2tPckVEOFkKLS0tIFBURGJWMnBnUXlLY1RhcmZVRTBC
+            TDFxdnd2VnhjOG90OTM2Y0N0dFRnbncKJXE3WYmNoIUp69ixGNbE2qklaj0iMMED
+            EskNz/s7MxEQArSGSV/V0nyMNgBU6M4Wwm9I6VqZ6kBDYfczZKF73A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-15T13:06:05Z"
-    mac: ENC[AES256_GCM,data:4CnQA2h0odMU6spuSRpfwn2Ra4FFtQO9rQdlHc0q/bjvYyweESxvv2esp8kWnt9jQUw04jbPzx5Hx9iyqbRcmfHTaNLgHnhHuOF/N/1VS02nWiVmM8z3TQjRcXOkOcGdWchImxodcr2P9kEoGMJx+1h16pf+39g7Lq6Ih9yj6dM=,iv:P2Hta6MUjC4KRBQPSlMw4Pqk7TiW9ZwlPvO6mpDHux4=,tag:/E8UL6l/oAlfk5knfR5m3Q==,type:str]
+    lastmodified: "2022-08-23T14:59:23Z"
+    mac: ENC[AES256_GCM,data:7KmjkCec5VK7V5gIbnYY2iqI5wUW0SvjboZgKXFcdGaVYsr2rRUmcM20R0tUznO2hOQ1mmKgnlQFPztM/ecoLMX40bzAyczR5mV8zKVi7CWsFKRkMeFBt6Wj8jNE+I8rejoVWWnUvW38KY/qevq0IHTlJv36vSKBTjVfzxX/qfE=,iv:9uyRaQnfeV8Fo4Kue7CxyIEMyufuHQpHi4LuB9PrfFs=,tag:ujkSeNEaq/ypSvSVn+UXYw==,type:str]
     pgp: []
     encrypted_regex: ^(data)$
     version: 3.7.3
