--- a/to-do-web/pom.xml
+++ b/to-do-web/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>to-do-web</artifactId>
-    <version>1.2</version>
+    <version>1.3</version>
     <name>ToDo Project Webapp</name>
     <packaging>war</packaging>
 
@@ -105,7 +105,7 @@
     </dependencies>
 
     <build>
-        <finalName>ROOT</finalName>
+        <finalName>todo</finalName>
     </build>
 
 </project>
