--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -21,13 +21,13 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 10
             httpGet:
-              path: /api/healthz
+              path: /api/healthz/ready
               port: 8080
           livenessProbe:
             initialDelaySeconds: 30
             periodSeconds: 20
             httpGet:
-              path: /api/healthz
+              path: /api/healthz/alive
               port: 8080
           env:
             - name: DB_HOST
@@ -77,16 +77,16 @@ spec:
           imagePullPolicy: Always
           name: to-do-web
           readinessProbe:
-            initialDelaySeconds: 10
-            periodSeconds: 10
-            httpGet:
-              path: /todo/api/healthz
-              port: 8080
-          livenessProbe:
             initialDelaySeconds: 30
             periodSeconds: 20
             httpGet:
               path: /todo/api/healthz
+              port: 8080
+          livenessProbe:
+            initialDelaySeconds: 60
+            periodSeconds: 20
+            httpGet:
+              path: /todo/test.xhtml
               port: 8080
           resources:
             limits:
