--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,7 @@ name: Release application
 env:
   PROJECT_ID: ${{ secrets.GKE_DWK_PROJECT }}
   GKE_CLUSTER: dwk-cluster
-  GKE_ZONE: europe-north1-c
+  GKE_ZONE: europe-north1-b
   TODO_API_IMAGE: to-do-api
   TODO_WEB_IMAGE: to-do-web
   TODO_DB_IMAGE: to-do-db
