--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -80,13 +80,13 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 20
             httpGet:
-              path: /todo/api/healthz
+              path: /api/healthz
               port: 8080
           livenessProbe:
             initialDelaySeconds: 60
             periodSeconds: 20
             httpGet:
-              path: /todo/test.xhtml
+              path: /test.xhtml
               port: 8080
           resources:
             limits:
