--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -29,10 +29,26 @@ spec:
       name: http
 
 ---
+apiVersion: cloud.google.com/v1
+kind: BackendConfig
+metadata:
+  name: web-svc-backend-cong
+spec:
+  healthCheck:
+    checkIntervalSec: 60
+    timeoutSec: 3
+    type: HTTP
+    requestPath: /todo/test.xhtml
+    port: 2345
+
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: to-do-web-svc
+  annotations:
+    cloud.google.com/backend-config: '{"ports": {"2345":"web-svc-backend-cong"}}'
+    cloud.google.com/neg: '{"ingress": true}'
 spec:
   type: NodePort
   selector:
