--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -32,7 +32,7 @@ spec:
 apiVersion: cloud.google.com/v1
 kind: BackendConfig
 metadata:
-  name: web-svc-backend-cong
+  name: web-svc-backend-conf
 spec:
   healthCheck:
     checkIntervalSec: 60
@@ -47,7 +47,7 @@ kind: Service
 metadata:
   name: to-do-web-svc
   annotations:
-    cloud.google.com/backend-config: '{"ports": {"2345":"web-svc-backend-cong"}}'
+    cloud.google.com/backend-config: '{"ports": {"2345":"web-svc-backend-conf"}}'
     cloud.google.com/neg: '{"ingress": true}'
 spec:
   type: NodePort
