--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -73,6 +73,6 @@ jobs:
           kustomize build . | kubectl apply -f -
           kubectl rollout status statefulset $TODO_DB_IMAGE
           kubectl rollout status deployment $TODO_API_IMAGE
-          kubectl rollout status deployment $TODO_WEB_IMAGE
+          kubectl rollout status deployment $TODO_WEB_IMAGE --timeout=5m
           kubectl get services -o wide
 
