--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,13 +64,18 @@ jobs:
       - name: Deploy
         run: |-
           kubectl create namespace $GITHUB_REF_NAME || true
+          echo 1
           kubectl config set-context --current --namespace=$GITHUB_REF_NAME
-          kustomize edit set namespace $GITHUB_REF_NAME
+          echo 2
+          kustomize edit set namespace ${GITHUB_REF_NAME}
+          echo 3
           kustomize edit set image to-do-api=gcr.io/$PROJECT_ID/$TODO_API_IMAGE:$GITHUB_REF_NAME-$GITHUB_SHA
           kustomize edit set image to-do-web=gcr.io/$PROJECT_ID/$TODO_WEB_IMAGE:$GITHUB_REF_NAME-$GITHUB_SHA
           kustomize edit set image to-do-db=gcr.io/$PROJECT_ID/$TODO_DB_IMAGE:$GITHUB_REF_NAME-$GITHUB_SHA
           kustomize edit set image to-do-daily=gcr.io/$PROJECT_ID/$TODO_DAILY_IMAGE:$GITHUB_REF_NAME-$GITHUB_SHA
+          echo 4
           sed -e 's|NAMESPACE|$GITHUB_REF_NAME|g' manifests/analysistemplate.yaml | kubectl apply -f -
+          echo 5
           kustomize build . | kubectl apply -f -
           kubectl rollout status statefulset $TODO_DB_IMAGE
           kubectl rollout status deployment $TODO_API_IMAGE
