--- a/manifests/rollout.yaml
+++ b/manifests/rollout.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
-  name: to-do-api
+  name: to-do-api-dep
 spec:
   replicas: 22
   selector:
@@ -64,7 +64,7 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
-  name: to-do-web
+  name: to-do-web-dep
 spec:
   replicas: 2
   selector:
