--- a/manifests/horizontalpodautoscaler.yaml
+++ b/manifests/horizontalpodautoscaler.yaml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: web-hpa
+  name: web-dep-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: to-do-web
+    name: to-do-web-dep
   minReplicas: 1
   maxReplicas: 3
   behavior:
