--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -69,7 +69,7 @@ jobs:
           sed -e "s|NAMESPACE|$GITHUB_REF_NAME|g" manifests/analysistemplate.yaml | kubectl apply -f -
           kustomize build . | kubectl apply -f -
           kubectl rollout status statefulset to-do-db-statefulset
-          kubectl rollout status deployment to-do-api-dep
-          kubectl rollout status deployment to-do-web-dep --timeout=5m
+          kubectl argo rollouts status to-do-api-dep
+          kubectl argo rollouts status deployment to-do-web-dep
           kubectl get services -o wide
 
