--- a/manifests/analysistemplate.yaml
+++ b/manifests/analysistemplate.yaml
@@ -7,7 +7,7 @@ spec:
   metrics:
     - name: cpu-rate
       initialDelay: 10m
-      successCondition: result < 0.6
+      successCondition: result[0] < 0.6
       provider:
         prometheus:
           address: http://kube-prometheus-stack-1662-prometheus.prometheus.svc.cluster.local:9090
