Exercise 4.04: Project v1.8 fixing the script, adding timeout

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -78,8 +78,8 @@ jobs:
           kubectl rollout status statefulset to-do-db-statefulset
           echo "kubectl-argo-rollouts status to-do-api-dep"
           kubectl-argo-rollouts status to-do-api-dep
-          echo "kubectl-argo-rollouts status to-do-web-dep"
-          kubectl-argo-rollouts status to-do-web-dep
+          echo "kubectl-argo-rollouts status to-do-web-dep --timeout 20m"
+          kubectl-argo-rollouts status to-do-web-dep --timeout 20m
           echo "kubectl get services -o wide"
           kubectl get services -o wide
 
