--- a/manifests/rollout.yaml
+++ b/manifests/rollout.yaml
@@ -8,6 +8,9 @@ spec:
   selector:
     matchLabels:
       app: to-do-api
+  analysis:
+    successfulRunHistoryLimit: 2
+    unsuccessfulRunHistoryLimit: 2
   strategy:
     canary:
       steps:
@@ -15,6 +18,7 @@ spec:
         - analysis:
             templates:
               - templateName: cpu-rate
+  revisionHistoryLimit: 2
   template:
     metadata:
       labels:
@@ -77,6 +81,8 @@ spec:
         - analysis:
             templates:
               - templateName: cpu-rate
+  revisionHistoryLimit: 2
+  progressDeadlineSeconds: 1200
   template:
     metadata:
       labels:
