Exercise 4.05: Project v1.9 a new endpoint, renaming of the database attribute and pretty tabulation

--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -14,3 +14,10 @@ spec:
                 name: to-do-web-svc
                 port:
                   name: http
+          - path: /api
+            pathType: Prefix
+            backend:
+              service:
+                name: to-do-api-svc
+                port:
+                  name: http
