Exercise 4.05: Project v1.9 no need in PVC, it doesn't work as ReadWriteMany

--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -70,8 +70,7 @@ spec:
     spec:
       volumes:
         - name: shared-image
-          persistentVolumeClaim:
-            claimName: image-claim
+          emptyDir: {}
       containers:
         - image: to-do-web
           imagePullPolicy: Always
