--- a/manifests/rollout.yaml
+++ b/manifests/rollout.yaml
@@ -90,8 +90,7 @@ spec:
     spec:
       volumes:
         - name: shared-image
-          persistentVolumeClaim:
-            claimName: image-claim
+          emptyDir: {}
       containers:
         - image: to-do-web
           imagePullPolicy: Always
